Fixed navigation menu text align

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -121,6 +121,10 @@ body {
     float: left;
 }
 
+.header .navigation-container .navigation-menu {
+    text-align: right;
+}
+
 .header .navigation-container .navigation-menu > a {
     color: #9AB216;
     cursor: pointer;
